--- a/src/index.html
+++ b/src/index.html
@@ -38,12 +38,9 @@
 
               </div>
             </section>
-            <section class="modal" id="commentModal">
-              <div class="modal-content">
-                <span class="close">&times;</span>
-                <p>Some text in the Modal..</p>
-              </div>
-            </section>
         </main>
+        <footer>
+          <p> Created by Microverse under CC licsence</p>
+        </footer>
     </body>
     </html>
