Update and fix popup and display list

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <title>THE GAME OF THRONES</title>
     </head>
     <body>
-        <main>
+        <main id="mainId">
             <header>
             <h1>THE GAME OF THRONES</h1>
             <nav>
@@ -40,12 +40,9 @@
             </section>
 
         </main>
-   
-
            <section class="modal" id="commentModal">
-              <div id="characterS"></div>
+             
             </section>
-        </main>
      <footer>
           <p> Created by Microverse under CC licsence</p>
         </footer>
